{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "b1ddd4cc-ec58-42ed-8b9a-d874a83612ab",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0b6c6935-eb26-44f9-b73b-1e5202707645",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "cc12ada1-9b6c-4de8-9cc7-a2400e207db9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "3ca124ac-8da5-45f7-8c5a-f5c22e6042dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "1c444c64-9719-420e-8e3d-3d6d28180d26",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "bbf99c3d-2b50-4ebf-94fc-908079914999",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraRotate",
                    "type": "Value",
                    "id": "53b85a1c-84f7-4c23-942d-bed4604f32d5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraDistance",
                    "type": "Value",
                    "id": "5bfcb733-afa6-41ff-9d13-9ccb69f9237e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b4c5896c-1804-44e9-82b8-7db83eee6c12",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "11b24dfb-994d-43ce-b1ff-4219c40a634d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6dc3c551-a699-41f6-b6b7-01b8c26d5f30",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "01f61b3b-ae01-42cc-81c1-b58ec5b3d508",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "84724e5d-36e0-47cc-b281-342de17cd797",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "be4cd7ba-aac8-44e1-98f0-c320c86d03ca",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5dc7f517-1b42-4b89-a5e6-5c06c9fee563",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f2cc243-84d4-4c38-bcab-ac5dabf515ae",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6b5c241-aaaf-430b-b3e1-a0339059aee9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d038dedd-3287-4fff-b535-f3013c2e2d95",
                    "path": "<Mouse>/delta",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "db700cc5-ec9e-406c-b6c7-a7c065e61ca7",
                    "path": "<Mouse>/scroll",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CameraDistance",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}